Adding Unit Testing Project

--- a/ImageEdgeDetection/ImageEdgeDetection.csproj
+++ b/ImageEdgeDetection/ImageEdgeDetection.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="READ_ME.TXT" />
+    <Content Include="TestingAssets\UnitTestExample2.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
