--- a/ImageEdgeDetectionUnitTesting/ImageEdgeDetectionUnitTesting.csproj
+++ b/ImageEdgeDetectionUnitTesting/ImageEdgeDetectionUnitTesting.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\ImageEdgeDetection\ImageEdgeDetection.csproj" />
+	</ItemGroup>
+
 </Project>
