--- a/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
+++ b/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
@@ -50,40 +50,37 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="HellFilter_True.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="MiamiFilter_True.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="gigachad.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="laplacian3x3FilterfalseImage.png">
+    <Content Include="TestingAssets\HellFilter_True.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="laplacian3x3FilterTrueImage.png">
+    <Content Include="TestingAssets\laplacian3x3FilterfalseImage.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Laplacian5x5FilterFalse.png">
+    <Content Include="TestingAssets\laplacian3x3FilterTrueImage.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Laplacian5x5FilterTrue.png">
+    <Content Include="TestingAssets\Laplacian5x5FilterFalse.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="LaplacianOfGaussianFilter.png">
+    <Content Include="TestingAssets\Laplacian5x5FilterTrue.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="original_Preview.png">
+    <Content Include="TestingAssets\LaplacianOfGaussianFilter.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="standard.png">
+    <Content Include="TestingAssets\MiamiFilter_True.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="ZenFilter2.png">
+    <Content Include="TestingAssets\original_Preview.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="ZenFilter_True.png">
+    <Content Include="TestingAssets\standard.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="TestingAssets\ZenFilter_True.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
