--- a/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
+++ b/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
@@ -42,6 +42,11 @@
   <ItemGroup>
     <Compile Include="EdgeDriverTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ImageEdgeDetection\ImageEdgeDetection.csproj">
@@ -50,16 +55,21 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="gigachad.PNG" />
-    <Content Include="laplacian3x3FilterfalseImage.png" />
-    <Content Include="laplacian3x3FilterTrueImage.png" />
-    <Content Include="Laplacian5x5FilterFalse.png" />
-    <Content Include="Laplacian5x5FilterTrue.png" />
-    <Content Include="LaplacianOfGaussianFilter.png" />
-    <Content Include="standard.png" />
+    <None Include="Resources\pictureHell.png" />
+    <None Include="Resources\pictureMiami.png" />
+    <None Include="Resources\pictureZen.png" />
+    <None Include="Resources\laplacian3x3FilterfalseImage.png" />
+    <None Include="Resources\laplacian3x3FilterTrueImage.png" />
+    <None Include="Resources\Laplacian5x5FilterFalse.png" />
+    <None Include="Resources\Laplacian5x5FilterTrue.png" />
+    <None Include="Resources\LaplacianOfGaussianFilter.png" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Ressources\" />
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
