--- a/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
+++ b/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
@@ -64,12 +64,17 @@
     <None Include="Resources\Laplacian5x5FilterTrue.png" />
     <None Include="Resources\LaplacianOfGaussianFilter.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\standard.png" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gigachad.PNG" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
