--- a/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
+++ b/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
@@ -18,6 +18,7 @@
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <WarningLevel>2</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
