--- a/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
+++ b/EdgeDriverTest1Framework/EdgeDriverTest1Framework.csproj
@@ -30,6 +30,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MSTest.TestAdapter">
@@ -37,6 +38,9 @@
     </PackageReference>
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="NSubstitute">
+      <Version>4.4.0</Version>
     </PackageReference>
     <PackageReference Include="Selenium.WebDriver" Version="3.14.0" />
   </ItemGroup>
@@ -79,6 +83,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\standardNotColored.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gigachadBMP.bmp" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
