--- a/ImageEdgeDetection/ImageEdgeDetection.csproj
+++ b/ImageEdgeDetection/ImageEdgeDetection.csproj
@@ -64,22 +64,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorFilterManager.cs" />
+    <Compile Include="Business\ExtBitmap.cs" />
+    <Compile Include="Business\Filters.cs" />
+    <Compile Include="Business\IFilters.cs" />
     <Compile Include="Controllers\DataManipulation.cs" />
-    <Compile Include="Controllers\Filters.cs" />
-    <Compile Include="Controllers\IFilters.cs" />
     <Compile Include="Controllers\IDataManipulation.cs" />
-    <Compile Include="ExtBitmap.cs" />
-    <Compile Include="FilterMatrix.cs" />
-    <Compile Include="General.cs" />
-    <Compile Include="ImageFilter.cs" />
+    <Compile Include="Business\ImageFilter.cs" />
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Matrix.cs" />
+    <Compile Include="Business\Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Views\MainForm.resx">
@@ -110,7 +107,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="READ_ME.TXT" />
-    <Content Include="TestingAssets\UnitTestExample2.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
